--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <header>
         <div class="logo-container">
-            <img src="https://i.imgur.com/BK2U01c.png" alt="Connys Pferdewelt Logo" class="logo-img">
+            <img src="https://i.imgur.com/ybovbhF.jpeg" alt="Connys Pferdewelt Logo" class="logo-img">
         </div>
         <a href="mailto:conny.bluemert@aon.at" class="nav-contact">Anfrage senden</a>
     </header>
