--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div>
                 <!-- Fix: Logo in einer weißen Karte für den Footer -->
                 <div class="footer-logo-card">
-                    <img src="https://i.imgur.com/BK2U01c.png" alt="Logo" class="footer-logo-img">
+                    <img src="https://i.imgur.com/ybovbhF.jpeg" alt="Logo" class="footer-logo-img">
                 </div>
                 <p style="opacity: 0.7; max-width: 350px;">Professionelles Geitner-Training für Pferde in jedem Alter. Fokus auf Biomechanik und mentale Stärke.</p>
             </div>
